# tg-housing-services

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
.github/ansible/: test.yaml
.github/workflows/: build.yaml  codeql.yaml  deploy.yaml  test.yaml  tests.yaml
etc/: deploy  docker-compose.yaml  docker-compose.yml  docker-entrypoint  service-start  service-stop  tg-housing.service
etc/ansible/: deploy.yaml
src/: main.py  main_with_state.py  utils.py
src/cli/: run_manual.py
src/config/: app.py  logging.py
src/db/: models.py  storage.py  utils.py
src/handlers/: bot_handlers.py  helpers.py
src/parsing/: checking.py  main.py  main_parsing.py
src/providers/: shutdowns.py
src/tests/: test_extractors.py
