[tool.poetry]
name = "tg housing service"
version = "0.1.0"
description = ""
authors = ["DmitryBurnaev <dmitry.burnaev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.6.0"
httpx = "0.27.0"
lxml = "5.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
pyright = "^1.1.362"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
